[iOS] Fix BVC's |-isTabScrolledToTopForBubblePresenter:|.

Now that the scroll proxy's contentInset is not guaranteed to be zero,
we need to check against the contentInset instead of CGPointZero.

Bug: 894617
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I5ba5131c969a4584879be905a92f0736a34d7f46
Reviewed-on: https://chromium-review.googlesource.com/c/1277674
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599161}